--- a/deployment/route.yaml
+++ b/deployment/route.yaml
@@ -1,12 +1,11 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: <your-route-name>
+  name: express-route
 spec:
-  host: <your-hostname>
   to:
     kind: Service
-    name: <your-service-name>
+    name: express-service
     weight: 100
   port:
     targetPort: http
