--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: express-app-container
-          image: https://github.com/omar93/express
+          image: omaralhamad/express:latest
           ports:
             - containerPort: 3000
           livenessProbe:
