--- a/argocd/applications.yaml
+++ b/argocd/applications.yaml
@@ -6,14 +6,14 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/<your-github-username>/<your-repo-name>.git
-    path: k8s-manifests
+    repoURL: https://github.com/omar93/express
+    path: deployment
     targetRevision: HEAD
     directory:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: <your-desired-namespace>
+    namespace: omar
   syncPolicy:
     automated:
       prune: true
