changing path of deployment

--- a/argocd/applications.yaml
+++ b/argocd/applications.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/omar93/express
-    path: deployment
+    path: ../deployment
     targetRevision: HEAD
     directory:
       recurse: true
